# incubyte-assessment

./: .gitignore  ARCHITECTURE.md  PROMPTS.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: database.py  main.py
backend/app/core/: cache.py  config.py  exceptions.py  rate_limit.py
backend/app/models/: employee.py  enums.py
backend/app/repositories/: employee_repository.py
backend/app/routers/: employees.py  insights.py
backend/app/schemas/: employee.py  insights.py
backend/app/services/: employee_service.py  insights_service.py
backend/scripts/: first_names.txt  last_names.txt  seed.py  verify_indexes.py
backend/tests/: conftest.py
backend/tests/integration/: test_employees_api.py  test_insights_api.py
backend/tests/unit/: test_employee_repository.py  test_employee_service.py  test_insights_service.py
frontend/: Dockerfile  jest.config.ts  package-lock.json  package.json
frontend/src/__tests__/components/: EmployeeForm.test.tsx  EmployeeTable.test.tsx  StatCard.test.tsx
frontend/src/__tests__/hooks/: useKeyboardShortcuts.test.ts
frontend/src/__tests__/lib/: api.test.ts
frontend/src/app/: layout.tsx
frontend/src/app/employees/: page.tsx
frontend/src/app/insights/: page.tsx
frontend/src/components/employees/: DeleteConfirmDialog.tsx  EmployeeDialog.tsx  EmployeeForm.tsx  EmployeeTable.tsx
frontend/src/components/insights/: CountryInsights.tsx  DepartmentChart.tsx  StatCard.tsx  (+4 more)
frontend/src/hooks/: useKeyboardShortcuts.ts
frontend/src/lib/: api.ts
frontend/src/types/: index.ts
(+4 files in other folders)
